--- a/src/gamex/gamexDesktopApp/Views/PasswordReminderView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/PasswordReminderView.xaml
@@ -17,7 +17,7 @@
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                Margin="5" />
-        <Label Content="Przypomnij hasło"
+        <Label Content="Remind password"
                FontSize="32"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
@@ -40,8 +40,7 @@
                    Width="50"
                    Height="30"
                    HorizontalAlignment="Left"
-                   VerticalAlignment="Center"
-                   />
+                   VerticalAlignment="Center" />
             <TextBox x:Name="txbMailPassReminder"
                      Grid.Column="0"
                      Grid.ColumnSpan="2"
@@ -63,7 +62,7 @@
                        Converter={StaticResource BooleanToVisibilityConverter}}" />
 
             <Button x:Name="btnSendNewPass"
-                    Content="Wyślij"
+                    Content="Send"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Grid.Row="1"
@@ -75,15 +74,22 @@
                     Height="30"
                     Margin="5"
                     Background="Black"
-                    Foreground="White" />
-            <Label Content="Nie masz konta?"
+                    Foreground="White"
+                    BorderBrush="{x:Null}">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7" />
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Label Content="You do not have an account?"
                    Grid.Column="0"
                    Grid.ColumnSpan="2"
                    Grid.Row="2"
                    FontSize="12"
                    FontStyle="Italic" />
             <Button x:Name="btnRegisterPassReminder"
-                    Content="Zarejestruj się"
+                    Content="Register"
                     Command="{Binding ViewRegisterCommand}"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
@@ -93,10 +99,16 @@
                     FontWeight="Bold"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
-                    HorizontalContentAlignment="Right"
+                    Width="80"
                     Margin="5"
-                    Background="White"
-                    BorderBrush="White" />
+                    Background="DarkRed"
+                    BorderBrush="{x:Null}">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7" />
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
     </StackPanel>
 </UserControl>
