--- a/src/gamex/gamexDesktopApp/Views/AccountView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/AccountView.xaml
@@ -15,13 +15,13 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200" />
-                <ColumnDefinition Width="500" />
                 <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="70" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
+                <RowDefinition Height="30" />
                 <RowDefinition Height="30" />
             </Grid.RowDefinitions>
             <Image Source="/Images/gamexTitle.png"
@@ -39,7 +39,7 @@
                 <Image Source="/Images/user.png" Stretch="Uniform" />
             </Button>
             <Label x:Name="lblUser"
-                   Content="Profil"
+                   Content="Profile"
                    Grid.Column="2"
                    Grid.Row="1"
                    HorizontalContentAlignment="Center"
@@ -67,7 +67,7 @@
                 <Image Source="/Images/logout.png" Stretch="Uniform" />
             </Button>
             <Label x:Name="lblLogout"
-                   Content="Wyloguj"
+                   Content="Logout"
                    Grid.Column="4"
                    Grid.Row="1"
                    HorizontalContentAlignment="Center"
@@ -76,7 +76,7 @@
 
         <StackPanel>
             <Label x:Name="lblUserProfile"
-                   Content="Profil użytkownika"
+                   Content="User profile"
                    FontSize="40" />
             <Border Height="2" Background="Black" />
         </StackPanel>
@@ -125,7 +125,7 @@
             <Label x:Name="lblEmail"
                    Grid.Column="1"
                    Grid.Row="2"
-                   Content="Adres email:"
+                   Content="E-mail:"
                    FontSize="20"
                    Margin="5"
                    HorizontalContentAlignment="Right" />
@@ -138,7 +138,7 @@
             <Label x:Name="lblNewPassword"
                    Grid.Column="1"
                    Grid.Row="3"
-                   Content="Nowe hasło:"
+                   Content="New password:"
                    FontSize="20"
                    Margin="5"
                    HorizontalContentAlignment="Right" />
@@ -153,7 +153,7 @@
             <Label x:Name="lblRepeatPassword"
                    Grid.Column="1"
                    Grid.Row="4"
-                   Content="Powtórz nowe hasło:"
+                   Content="Repeat new password:"
                    FontSize="20"
                    Margin="5"
                    HorizontalContentAlignment="Right" />
@@ -177,39 +177,60 @@
                        Converter={StaticResource BooleanToVisibilityConverter}}" />
             <Button x:Name="btnChangePassword"
                     Grid.Column="2"
-                    Grid.Row="6"
+                    Grid.Row="5"
                     Margin="5"
-                    Width="150"
+                    Width="220"
+                    Height="30"
                     HorizontalAlignment="Right"
                     BorderBrush="{x:Null}"
                     Foreground="White"
-                    Background="Black"
-                    Content="Zmień hasło"
-                    FontSize="25"
-                    Command="{Binding ChangePasswordCommand}" />
+                    Background="DarkRed"
+                    Content="Change password"
+                    FontSize="18"
+                    Command="{Binding ChangePasswordCommand}">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7" />
+                    </Style>
+                </Button.Resources>
+            </Button>
             <Button x:Name="btnGoBack"
+                    Grid.Column="2"
+                    Grid.Row="7"
+                    Margin="5"
+                    Width="220"
+                    BorderBrush="{x:Null}"
+                    Foreground="White"
+                    Background="Black"
+                    Content="Back to store"
+                    FontSize="18"
+                    HorizontalAlignment="Right"
+                    Command="{Binding BackToGamesCommand}">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7" />
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button x:Name="btnAdminPanel"
                     Grid.Column="0"
                     Grid.Row="7"
                     Margin="5"
-                    Width="200"
-                    BorderBrush="{x:Null}"
-                    Foreground="White"
-                    Background="Black"
-                    Content="Wróć do sklepu"
-                    FontSize="25"
-                    Command="{Binding BackToGamesCommand}" />
-            <Button x:Name="btnAdminPanel"
-                    Grid.Column="1"
-                    Grid.Row="7"
-                    Margin="5"
-                    Width="200"
+                    Width="220"
+                    Height="30"
                     HorizontalAlignment="Center"
-                    Content="Admin Panel"
+                    Content="Admin panel"
                     BorderBrush="{x:Null}"
                     Foreground="White"
                     Background="Black"
-                    FontSize="25"
-                    Command="{Binding GoToGamesAdminCommand}" />
+                    FontSize="18"
+                    Command="{Binding GoToGamesAdminCommand}">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7" />
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
     </StackPanel>
 </UserControl>
